# corewar

./: .gitignore  .gitmodules  Makefile  one_prc_ops.sh
compiler/: CMakeLists.txt  Makefile  autotest.sh  autotest_vm.sh  main.c  test.js
compiler/includes/: compiler.h
compiler/libft/: Makefile
compiler/libft/ft_numbers/: ft_atoi_m.c
compiler/libft/ft_str/: ft_skip_spaces.c
compiler/libft/ft_string/: ft_string_push_back.c
compiler/libft/includes/: ft_string.h  libft.h
compiler/srcs/: asm.h  errors.c  ft_args_parse.c  ft_champ.c  ft_cmds_parse.c  ft_compile.c  ft_find_s_h_flags.c  ft_flag_parse_utils.c  ft_flags.c  ft_freeshers.c  ft_header_utils.c  ft_labels_parse.c  ft_parse_header.c  ft_translator.c  ft_utils.c  globals.c  main.c  parser.c
virtual_machine/: CMakeLists.txt  Makefile  asinc_testing_system.py  corewar_old  dump_file.txt
virtual_machine/compare_dumps/: CMakeLists.txt  Makefile  dumpcmp
virtual_machine/compare_dumps/includes/: compare_dumps.h
virtual_machine/compare_dumps/sources/: diff_output.c  main.c  read_processes_output.c
virtual_machine/corewar/: Makefile  corewar
virtual_machine/corewar/includes/: gvector.h  timsort.h  virtual_machine.h  vm_constants.h  vm_types.h  vm_vector.h
virtual_machine/corewar/information/: vm_commands.txt
virtual_machine/corewar/sources/: check_flags.c  free_args.c  ft_custom_tools.c  ft_vm_vector_int.c  ft_vm_vector_int_utils.c  ft_vm_vector_prc.c  ft_vm_vector_prc_utils.c  ft_vm_vector_rng.c  globals.c  helpers.c  initialization.c  main.c  read_arguments.c  read_files.c  timsort.c  timsort_merge.c  vm_bheap_custom_NEW.c  vm_game.c  vm_game_NEW.c  vm_map_ops.c  vm_operations1.c  vm_operations2.c  vm_operations3.c  vm_operations4.c  vm_ops_methods.c  vm_print_dump.c  vm_processes_ops.c  vm_processes_ops_NEW.c
virtual_machine/debug/: asinc_testing_system.py  corewar_our_new  dump_diff.sh  find_process_vm.sh  image_process_ops.sh
virtual_machine/debug/champs_bins/: gg_new.cor
virtual_machine/debug/compare_dumps/: CMakeLists.txt  Makefile  dumpcmp
virtual_machine/debug/executable/: Makefile  invalide_diffs
virtual_machine/debug/origin_sources/: champs_bins
virtual_machine/debug/test/: check.sh  show_op.sh
virtual_machine/dump_diff/: CMakeLists.txt  Makefile
virtual_machine/dump_diff/includes/: dump_diff.h
virtual_machine/dump_diff/sources/: diff_output.c  dump_diff.c  helpers.c  read_processes_output.c
virtual_machine/executable/: autotest_vm.sh  champs  corewar  corewar2  create_cor_files.sh  error_diffs  invalide_diffs
virtual_machine/executable/dumps/: Asombra.cor_vs_Bazou.cor-10000_my  Asombra.cor_vs_Bazou.cor-15000_my  Asombra.cor_vs_Bazou.cor-15000_ref  Asombra.cor_vs_Bazou.cor-20000_my  Asombra.cor_vs_Bazou.cor-25000_my  Asombra.cor_vs_Bazou.cor-5000_my  Asombra.cor_vs_Bazou.cor-5000_ref  Asombra.cor_vs_ForgottenOne.cor-25000_my  Asombra.cor_vs_ForgottenOne.cor-25000_ref  Asombra.cor_vs_Horace.cor-10000_ref  Asombra.cor_vs_Horace.cor-15000_ref  Asombra.cor_vs_Horace.cor-20000_my  Asombra.cor_vs_Horace.cor-20000_ref  Asombra.cor_vs_Horace.cor-25000_ref  Asombra.cor_vs_Horace.cor-5000_my  Asombra.cor_vs_Horace.cor-5000_ref  Asombra.cor_vs_Izi_Miaou.cor-10000_my  Asombra.cor_vs_Izi_Miaou.cor-10000_ref  Asombra.cor_vs_Izi_Miaou.cor-15000_my  Asombra.cor_vs_Izi_Miaou.cor-15000_ref  Asombra.cor_vs_Izi_Miaou.cor-20000_my  Asombra.cor_vs_Izi_Miaou.cor-20000_ref  Asombra.cor_vs_Izi_Miaou.cor-25000_my  Asombra.cor_vs_Izi_Miaou.cor-25000_ref  Asombra.cor_vs_Izi_Miaou.cor-5000_my  Asombra.cor_vs_Izi_Miaou.cor-5000_ref  Asombra.cor_vs_Kitty_Miaou.cor-10000_my  Asombra.cor_vs_Kitty_Miaou.cor-10000_ref  Asombra.cor_vs_Kitty_Miaou.cor-15000_my  Asombra.cor_vs_Kitty_Miaou.cor-15000_ref  Asombra.cor_vs_Kitty_Miaou.cor-20000_my  Asombra.cor_vs_Kitty_Miaou.cor-20000_ref  Asombra.cor_vs_Kitty_Miaou.cor-25000_my  Asombra.cor_vs_Kitty_Miaou.cor-25000_ref  Asombra.cor_vs_Kitty_Miaou.cor-5000_my  (+444 more)
virtual_machine/ft_printf/: Makefile
virtual_machine/includes/: constants.h  types.h  virtual_machine.h  vm_constants.h  vm_types.h
virtual_machine/information/: info.txt  vm_commands.txt
virtual_machine/lib/: Makefile  ft_error.c  ft_getlines.c  ft_lstadd_back.c  ft_lstcpy_elem.c  ft_lstforeach.c  ft_lstiter.c  ft_lstrcpy.c  ft_memdel.c  ft_memzerdel.c  ft_putchar.c  ft_putendl.c  ft_putmem.c  ft_strclr.c  ft_striter.c  ft_strjoin.c  ft_strmapi.c  ft_strncat.c  ft_strrchr.c  ft_strtrim.c  libft.h  queue.h
virtual_machine/libft/: CMakeLists.txt  Makefile  bytes_reverse.c  free_args.c  ft_bzero.c  ft_error.c  ft_lstcpy.c  ft_lstmap.c  ft_lstputmem.c  ft_lstrev.c  ft_lstsplit.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memset.c  ft_print_endian.c  ft_putchar_fd.c  ft_putlst.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat_free.c  ft_strchr.c  ft_strequ.c  ft_striteri.c  ft_strlen.c  ft_strncpy.c  ft_strnequ_rev.c  ft_strsplit.c  ft_strstr.c  ft_tabdel.c  get_next_line.c  libft.h  matrix.c  matrix.h  queue.c  queue2.c  stack.h  (+1 more)
virtual_machine/libft_prew/: CMakeLists.txt  author  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstlen.c  ft_lstnew.c  ft_memcpy.c  ft_memmove.c  ft_putendl_fd.c  ft_strdel.c  ft_strdup.c  ft_strlcat.c  ft_strmap.c  ft_strncmp.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strsub.c  stack.c
virtual_machine/makebuild/: Config.make  Makefile  SourceDefinitions.make
virtual_machine/origin_sources/: player1.s  test.cor  test.s
virtual_machine/sources/: bigendian_ops.c  check_flags.c  dump.c  ft_vm_vector_rng.c  globals.c  helpers.c  initialisation.c  initialization.c  main.c  node_ops.c  operations.c  performing_ops.c  print_map.c  processes_ops.c  read_arguments.c  read_files.c  vm_game.c  vm_map_ops.c  vm_methods_and.c  vm_methods_ldi.c  vm_methods_or.c  vm_methods_xor.c  vm_operations1.c  vm_operations2.c  vm_operations3.c  vm_operations4.c  vm_ops_methods.c  vm_print_dump.c  vm_processes_ops.c
virtual_machine/test/: check.sh  my  show_op.sh
virtual_machine/visualization/: CMakeLists.txt  Makefile  visualization
(+136 files in other folders)
